--- a/fin.html
+++ b/fin.html
@@ -42,6 +42,23 @@
   </form>
   <div id="result"></div>
   
+  <!-- Slider -->
+  <div class="slider">
+    <a href="fin.html">
+    <div class="slides">
+        <div class="slide">
+            <img src="img\reuniao-1.jpg"alt="Seguindo tendências de mercado da melhor maneira.">
+        </div>
+        <div class="slide">
+            <img src="img\pequeno-negocio-1.jpg" alt="A melhor forma de começar o seu negócio.">
+        </div>
+        <div class="slide">
+            <img src="img\trabalhar-fora-1.jpg" alt="Ajudando você a descobrir novos horizontes.">
+        </div>
+    </div>
+    </a>
+</div>
+
 </section>
 
 <script src="js/script.js"></script>
