--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   <label for="principal">Valor do Empréstimo (R$):</label>
                   <input type="number" id="principal" min="0" step="0.01" required placeholder="exemplo: 1000">
             
-                  <label>Juros fixo de 5% ao mês</label>
+                  <label>Taxas a 5% ao mês</label>
             
                   <label for="installments">Número de Parcelas:</label>
                   <input type="number" id="installments" min="1" step="1" required placeholder="exemplo: 12">
