--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
             </ul>
         </div>
     </nav>
+    <!-- bar stock market -->
+    <div id="ticker-bar">
+        <div class="ticker-content"></div>
+    </div>
     <section id="conteudo">
-        <!-- bar stock market -->
-        <div id="ticker-bar">
-            <div class="ticker-content"></div>
-        </div>
 
         <form id="addLoanForm">
             <!-- Slider -->
@@ -84,7 +84,7 @@
                 </a>
             </div>
             <section id="loanCalculator">
-                <h2>Cálculo de Empréstimo</h2>
+                <h2>Faça seu Empréstimo</h2>
                 <form id="loanForm">
                   <label for="principal">Valor do Empréstimo (R$):</label>
                   <input type="number" id="principal" min="0" step="0.01" required placeholder="exemplo: 1000">
