list dropdown e ajax

--- a/index.html
+++ b/index.html
@@ -22,9 +22,17 @@
         <div class="nav-center">
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="https://servicos.receita.fazenda.gov.br/servicos/cpf/consultasituacao/consultapublica.asp">Serviços!</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Contato</a></li>
+                <li>Serviços
+                    <ul>
+                        <li><a href="scr/components/NewsTicker.html">Noticias do Mercado</a></li>
+                        <li><a href="scr/pages/Investimentos.html">Investimentos</a></li>
+                        <ii><a href="scr/pages/Associados.html"></a> Associados</ii>
+                        <li><a href="scr/User/emprestimos.html"></a>Empréstimmos</li>
+                        <li><a href="scr/components/StockMarket.html">Mercado de Ações</a></li>
+                    </ul>
+                </li>
+                <li><a href="scr/pages/About.html">Sobre</a></li>
+                <li id="anchor">Contato</a></li>
             </ul>
         </div>
         <div class="nav-right">
@@ -54,9 +62,17 @@
         <div class="nav-sidebar">
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="#">Serviços</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Contato</a></li>
+                <li>Serviços
+                    <ul>
+                        <li><a href="scr/components/NewsTicker.html">Noticias do Mercado</a></li>
+                        <li><a href="scr/pages/Investimentos.html">Investimentos</a></li>
+                        <ii><a href="scr/pages/Associados.html"></a> Associados</ii>
+                        <li><a href="scr/User/emprestimos.html"></a>Empréstimmos</li>
+                        <li><a href="scr/components/StockMarket.html">Mercado de Ações</a></li>
+                    </ul>
+                </li>
+                <li><a href="scr/pages/About.html">Sobre</a></li>
+                <li id="anchor">Contato</a></li>
             </ul>
         </div>
     </nav>
@@ -80,7 +96,6 @@
                         <img src="img\trabalhar-fora-1.jpg" alt="Ajudando você a descobrir novos horizontes.">
                     </div>
                 </div>
-                </a>
             </div>
             <section id="loanCalculator">
                 <h2>Faça seu Empréstimo</h2>
