--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </ul>
                 </li>
                 <li><a href="scr/pages/About.html">Sobre</a></li>
-                <li id="anchor">Contato</a></li>
+                <li id="anchor"><a href="#">Contato</a></li>
             </ul>
         </div>
         <div class="nav-right">
@@ -72,7 +72,7 @@
                     </ul>
                 </li>
                 <li><a href="scr/pages/About.html">Sobre</a></li>
-                <li id="anchor">Contato</a></li>
+                <li id="anchor"><a href="#">Contato</a></li>
             </ul>
         </div>
     </nav>
@@ -212,37 +212,38 @@
         </section>
     </section>
     <!-- Rodapé com informações bancárias -->
-    <footer>
-        <div class="info">
-            <h3>Transparência</h3>
-            <p> Política de privacidade</p>
-            <p >Política de segurança </p>
-            <p> Contratos</p>
-            <p> Relatórios financeiros </p>
-            <p> Ética e compliance </p>
-            <p> Dados abertos</p>
-            <p> SCR </p>
-            <p> Convenção de boletos </p>
-            <p> PLD/CFTP </p>
-            <p> Cessão de Créditos (Desenrola)</p>
-        </div>
+    <section id="contato">
+        <footer>
+            <div class="info">
+                <h3>Transparência</h3>
+                <p> Política de privacidade</p>
+                <p >Política de segurança </p>
+                <p> Contratos</p>
+                <p> Relatórios financeiros </p>
+                <p> Ética e compliance </p>
+                <p> Dados abertos</p>
+                <p> SCR </p>
+                <p> Convenção de boletos </p>
+                <p> PLD/CFTP </p>
+                <p> Cessão de Créditos (Desenrola)</p>
+            </div>
 
-        <div class="info">
-            <h3>Fale com a gente</h3>
-            <p><strong>Capitais e Regiões metropolitanas:</strong> 4000 0000</p>
-            <p><strong>Demais localidades:</strong> 0800 000 0000</p>
-            <p><strong>Email:</strong> meajuda@zebank.com.br</p>
-            <p>Atendimento 24h</p>
-        </div>
+            <div class="info">
+                <h3>Fale com a gente</h3>
+                <p><strong>Capitais e Regiões metropolitanas:</strong> 4000 0000</p>
+                <p><strong>Demais localidades:</strong> 0800 000 0000</p>
+                <p><strong>Email:</strong> meajuda@zebank.com.br</p>
+                <p>Atendimento 24h</p>
+            </div>
 
-        <div class="info">
-            <h3>Ouvidoria</h3>
-            <p><strong>Telefone:</strong> 0800 000 0000</p>
-            <p>Atendimento em dias úteis das 8h às 18h</p>
-            <p><strong>Email:</strong> ouvidoria@Febre500.com.br</p>
-        </div>
-    </footer>
-
+            <div class="info">
+                <h3>Ouvidoria</h3>
+                <p><strong>Telefone:</strong> 0800 000 0000</p>
+                <p>Atendimento em dias úteis das 8h às 18h</p>
+                <p><strong>Email:</strong> ouvidoria@Febre500.com.br</p>
+            </div>
+        </footer>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
