--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             <button class="button-list" onclick="toggleNav()">
                     <i class="fa fa-lg fa-bars"></i>
             </button>
+            <button id="logoutBtn" class="dark-theme" style="display:none">
+                <i class="fa fa-sign-out"></i>
+              </button>
         </div>
 
         <!-- Fundo escuro e caixa de login -->
@@ -56,6 +59,7 @@
                 <a href="#">Esqueceu a senha?</a>
                 <button class="submit-btn">Entrar</button>
             </form>
+
         </div>
     </div>
 
