--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <input type="email" placeholder="Usuário" id="email" required>
                 <input type="password" placeholder="Senha" id="senha" required>
                 <a href="#">Esqueceu a senha?</a>
+                <a href="/scr/User/register.html">cadastre-se</a>
                 <button class="submit-btn">Entrar</button>
             </form>
 
