--- a/scr/User/register.html
+++ b/scr/User/register.html
@@ -89,13 +89,14 @@
     <h2>Cadastro de Usuário</h2>
     <form id="registerForm">
         <div class="modal-content">
-      <label for="first_name">Nome:</label>
-      <input type="text" id="first_name" name="first_name" required>
-  
-      <label for="last_name">Sobrenome:</label>
-      <input type="text" id="last_name" name="last_name" required>
+      <label for="name">Nome Completo:</label>
+      <input type="text" id="name" name="name" required>
 
+      <label for="cpf">CPF:</label>
+      <input type="text" id="cpf" name="cpf" required>
 
+      <label for="dataNasc">Data de Nascimento:</label>
+      <input type="text" id="date_of_birth" name="date_of_birth" required>
   
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required>
